--- a/less/contact.less
+++ b/less/contact.less
@@ -10,10 +10,10 @@
     margin-left: 5%;
     margin-top: 2%;
     @media @phone {
-      width: 100%;
+      width: 90%;
       text-align: left;
       font-size: 4rem;
-      padding-left: 5%;
+
       font-weight: bold;
       margin-bottom: 2%;
       font-family: "Quicksand", sans-serif;
