--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,22 +3,6 @@
 .home {
   background: linear-gradient(to bottom, #ff791a, #ff791a);
   max-width: 100%;
-
-  // button {
-  //   // font-size: 20px;
-  //   // cursor: pointer;
-  //   background-color: @complementary;
-  //   // color: white;
-  //   padding: 10px 15px;
-  //   // border: none;
-  //   position: sticky;
-  //   left: 100%;
-  //   width: 4em;
-  //   top: 10%;
-  //   border: none;
-  //   box-shadow: 3px 3px 10px;
-  //   border-radius: 10px;
-  // }
   .projects {
     width: 100%;
     margin: 0 auto;
@@ -35,10 +19,10 @@
       font-weight: bold;
       padding-bottom: 5%;
       font-family: "Quicksand", sans-serif;
-      margin-left: 5%;
+
       margin-top: 2%;
       @media @phone {
-        width: 100%;
+        width: 90%;
         text-align: left;
         font-size: 4rem;
         padding-left: 5%;
@@ -73,13 +57,13 @@
         margin-left: 5%;
         margin-top: 2%;
         @media @phone {
-          width: 100%;
+          width: 90%;
           text-align: center;
           font-size: 3rem;
           font-weight: bold;
           margin-bottom: 2%;
           font-family: "Quicksand", sans-serif;
-          margin-left: 5%;
+
           margin-top: 2%;
         }
       }
